--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "url": "https://github.com/jimmyrocks/xmljs_trans_js"
   },
   "dependencies": {
-    "xml2js": "0.4.16",
-    "xmlbuilder": "^8.2.2"
+    "xml2js": "0.4.17",
+    "xmlbuilder": "8.2.2"
   }
 }
